--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/developeramit14jan/hospital_api#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.11",
